2015-05-27  Takashi Yano  <takashi.yano@nifty.ne.jp>

	* net.cc: Define _NETIOAPI_H_ to accomodate newer w32api.

2015-05-03  Corinna Vinschen  <corinna@vinschen.de>

	* include/cygwin/version.h (CYGWIN_VERSION_DLL_MINOR): Bump to 2.

2015-04-30  Corinna Vinschen  <corinna@vinschen.de>

	* include/cygwin/version.h (CYGWIN_VERSION_DLL_MINOR): Bump to 1.

2015-04-30  Corinna Vinschen  <corinna@vinschen.de>

	* security.cc (convert_samba_sd): Fix accidental dropping of all
	non-Unix User, non-Unix Group accounts.

2015-04-27  Corinna Vinschen  <corinna@vinschen.de>

	* include/asm/types.h: Add __s64 and __u64 types.

2015-04-23  Corinna Vinschen  <corinna@vinschen.de>

	* path.cc (path_conv::set_nt_native_path): New function.
	* path.h (path_conv::set_nt_native_path): Add prototype.
	* syscall.cc (try_to_bin): Handle moving files to the recycler
	accessed via a local virtual drive (subst).  Fix a problem renaming
	the file to the unique replacement name on Samba.  Align comment.

2015-04-22  Corinna Vinschen  <corinna@vinschen.de>

	* fhandler_tty.cc (fhandler_pty_slave::fch_close_handles): Don't close
	handles not opened via fhandler_pty_slave::fch_open_handles.

2015-04-22  Takashi Yano  <takashi.yano@nifty.ne.jp>

	* fhandler.h (class fhandler_base): Add virtual function
	get_io_handle_cyg() to get handle from which OPOST-processed output is
	read on PTY master.
	(class fhandler_pty_slave): Add variable output_handle_cyg to store a
	handle to which OPOST-processed output is written. Add two functions,
	i.e., set_output_handle_cyg() and get_output_handle_cyg(), regarding
	variable output_handle_cyg. Now, output_handle is used only by native
	windows program. The data before OPOST-processing is written to
	output_handle and OPOST-processing is applied in the master-side. For a
	cygwin process, OPOST-processing is applied in the slave-side, and the
	data after OPOST-processing is written to output_handle_cyg.